tests/type/redeclare_fn_same_scope.rev
fn add() {}
fn add() {} // error: a function with the same name as already been declared in this scope